# accounting

./: .gitignore  Cargo.toml  README.md
accounting/: Cargo.toml
accounting-api/: Cargo.toml
accounting-api/locales/: en.yaml  zh-CN.yaml
accounting-api/src/: dto.rs  main.rs  router.rs
accounting-api/src/handlers/: account.rs  budget.rs  channel.rs  commodity.rs  me.rs  member.rs  mod.rs  report.rs  tag.rs  transaction.rs
accounting-beancount/: Cargo.toml
accounting-beancount/src/: error.rs  export.rs  generator.rs  import.rs  lib.rs  model.rs  parser.rs
accounting-beancount/tests/: integration_tests.rs
accounting-cli/: Cargo.toml  README.md
accounting-cli/docs/: README.md
accounting-cli/docs/commands/: account.md  beancount.md  budget.md  commodity.md  config.md  import.md  initialize.md  mapping.md  member.md  report.md  tag.md  tx.md
accounting-cli/docs/examples/: 01-first-book.md  02-budget-tracking.md  03-import-and-reconcile.md  04-multi-channel-expense.md  05-beancount-roundtrip.md
accounting-cli/locales/: en.yaml  zh-CN.yaml
accounting-cli/src/: lib.rs  main.rs  output.rs
accounting-cli/src/cmd/: account.rs  beancount.rs  budget.rs  commodity.rs  config.rs  import.rs  mapping.rs  member.rs  mod.rs  report.rs  resolver.rs  tag.rs  tx.rs
accounting-cli/tests/: natural_keys.rs
accounting-import/: Cargo.toml
accounting-import/src/: alipay.rs  lib.rs
accounting-import/test/: 支付宝交易明细.csv
accounting-service/: Cargo.toml
accounting-service/locales/: en.yaml  zh-CN.yaml
accounting-service/src/: account_service.rs  budget_service.rs  commodity_service.rs  import_service.rs  lib.rs  mapping_service.rs  member_service.rs  report_service.rs  tag_service.rs  transaction_service.rs
accounting-service/src/config/: dto.rs  mod.rs  service.rs
accounting-service/src/import/: alipay.rs  mod.rs
accounting-service/src/report/: balance_sheet.rs  budget.rs  cash_flow.rs  category_breakdown.rs  daily_summary.rs  mod.rs  net_worth_trend.rs
accounting-sql/: Cargo.toml
accounting-sql/src/: database.rs  error.rs  impls.rs  lib.rs  names.rs  pool.rs  repo.rs  schema.rs  transaction.rs
accounting-sql/src/impls/: sqlite.rs
accounting-sql/src/repo/: account.rs  account_mapping.rs  attachment.rs  budget.rs  channel.rs  channel_path.rs  commodity.rs  member.rs  posting.rs  tag.rs  transaction.rs
accounting-web/: .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
accounting-web/src/: App.vue  i18n.ts  main.ts  style.css
accounting-web/src/__tests__/: i18n.spec.ts
accounting-web/src/api/: client.ts
accounting-web/src/components/: AccountCard.vue  AccountPicker.vue  AccountSelector.vue  AccountTreeList.vue  BalanceSheetPanel.vue  BottomSheet.vue  Calendar.vue  CalendarGrid.vue  CashFlowPanel.vue  CashFlowTable.vue  CategorySunburst.vue  HelloWorld.vue  Layout.vue  NetWorthTrendChart.vue  PeriodNav.vue  PeriodSelect.vue  TransactionCard.vue  TransactionDetail.vue  TransactionList.vue
accounting-web/src/composables/: useAccountDrag.ts  useAccountTree.ts  useGridColumns.ts  useResponsiveLayout.ts
accounting-web/src/locales/: en.ts  zh-CN.ts
accounting-web/src/router/: index.ts
accounting-web/src/stores/: account.ts  budget.ts  channel.ts  commodity.ts  member.ts  report.ts  tag.ts  theme.ts  transaction.ts
accounting-web/src/types/: api.ts
accounting-web/src/utils/: accountGrid.ts  amount.ts  date.ts  echarts.ts  siblingOrder.ts  sunburst.ts
accounting-web/src/views/: AccountCards.vue  AccountTree.vue  AccountsView.vue  AssetsView.vue  BudgetView.vue  CalendarView.vue  Dashboard.vue  Members.vue  ReportView.vue  Settings.vue  Tags.vue  TransactionForm.vue  TransactionView.vue
accounting/locales/: en.yaml  zh-CN.yaml
accounting/src/: account.rs  account_mapping.rs  account_type.rs  amount.rs  attachment.rs  balance.rs  budget.rs  channel.rs  channel_path.rs  closure.rs  commodity.rs  datetime_utils.rs  error.rs  finance_period.rs  id.rs  installment.rs  lib.rs  member.rs  name.rs  posting.rs  posting_role.rs  tag.rs  transaction.rs  transaction_filter.rs  validation.rs
docs/superpowers/plans/: 2026-06-05-audit-time-fields.md  2026-06-06-i18n.md  2026-06-12-refund-reimbursement-ui-redesign.md  2026-06-13-account-cards.md  2026-06-18-account-picker-bottom-sheet.md  2026-06-19-account-tree-list-redesign.md  2026-06-22-remove-liability.md  2026-06-23-refactor-plans.md  2026-07-09-account-view-grid.md
docs/superpowers/reviews/: 2026-06-24-data-structure-refactor.md
docs/superpowers/specs/: 2025-06-05-transaction-overview-design.md  2025-06-07-account-tree-style-design.md  2026-06-05-accounting-stat-design.md  2026-06-05-audit-time-fields-design.md  2026-06-05-web-ui-design.md  2026-06-06-i18n-design.md  2026-06-12-refund-reimbursement-ui-redesign-design.md  2026-06-13-account-cards-design.md  2026-06-13-account-picker-design.md  2026-06-18-account-picker-bottom-sheet-design.md  2026-06-19-account-tree-list-redesign.md  2026-06-22-remove-liability-design.md  2026-06-23-refactor-plans-design.md  2026-06-24-transaction-filter-multi-select-design.md  2026-07-09-account-view-grid-design.md  2026-07-09-account-view-grid-v2-design.html
openspec/changes/account-mapping/: design.md  tasks.md
openspec/changes/add-account-page/: design.md  tasks.md
openspec/changes/bill-import/: design.md  proposal.md  tasks.md
openspec/changes/budget-system/: proposal.md  tasks.md
openspec/changes/builtin-channel-alipay/: design.md  tasks.md
openspec/changes/channel-path/: design.md  tasks.md
openspec/changes/config-export-import/: tasks.md
openspec/changes/frontend-real-data/: design.md  proposal.md  tasks.md
plan/: account-name-refactor.md  account-type-refactor.md  accounting-sqlx-impl.md  audit-fields-improvement.md  cli-design.md  multi-tenant-analysis.md  phase1.md  phase2.md  phase3.md  refund-reimbursement-plan.md  remove-redundant-fields.md  sql-dual-backend.md
spec/: architecture.md  core.md  history.md  refund-reimbursement-design.md  service.md  sql.md
(+210 files in other folders)
