[workspace]
members = [
    "accounting",
    "accounting-sql",
    "accounting-service",
    "accounting-cli",
    "accounting-api",
]
resolver = "3"

[workspace.dependencies]
accounting.path = "accounting"
accounting-sql.path = "accounting-sql"
accounting-service.path = "accounting-service"

thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.40", features = ["bundled"] }
clap = { version = "4.6", features = ["derive"] }
rust_decimal = "1.42"
rust-i18n = "4.1"
