[package]
name = "accounting-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

accounting = { path = "../accounting" }
accounting-sql = { path = "../accounting-sql" }
accounting-service = { path = "../accounting-service" }
