[package]
name = "accounting-api"
version = "0.1.0"
edition = "2024"

[dependencies]
accounting.workspace = true
accounting-sql.workspace = true
accounting-service.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
rust_decimal.workspace = true

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
