[package]
name = "accounting-beancount"
version = "0.1.0"
edition = "2024"

[dependencies]
accounting = { path = "../accounting" }
accounting-sql = { path = "../accounting-sql" }
chrono.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio.workspace = true
