[package]
name = "accounting-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "accounting"
path = "src/main.rs"

[dependencies]
accounting = { path = "../accounting" }
accounting-sql = { path = "../accounting-sql" }
accounting-service = { path = "../accounting-service" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
