[package]
name = "accounting-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "accounting"
path = "src/main.rs"

[dependencies]
accounting = { path = "../accounting" }
accounting-sql = { path = "../accounting-sql" }
accounting-service = { path = "../accounting-service" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tabled = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rust_decimal = "1.36"
rust-i18n = "3"
