[package]
name = "accounting-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
accounting.workspace = true
accounting-sql.workspace = true
accounting-service.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust-i18n.workspace = true

tabled = "0.21"
