[package]
name = "accounting-service"
version = "0.1.0"
edition = "2024"

[dependencies]
accounting.workspace = true
accounting-sql.workspace = true
chrono.workspace = true
encoding_rs = "0.8"
rust_decimal.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tokio.workspace = true
